--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.10",
+    "jwt-decode": "^3.1.2",
     "lucide-react": "^0.261.0",
     "next": "13.4.10",
     "postcss": "8.4.26",
@@ -25,6 +27,7 @@
   },
   "devDependencies": {
     "@rocketseat/eslint-config": "^2.1.0",
+    "@tailwindcss/forms": "^0.5.4",
     "prettier-plugin-tailwindcss": "^0.4.1"
   }
 }
